--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -75,6 +75,7 @@
     <system:String x:Key="item78">Ingrese el código de autenticación de dos factores enviado a su aplicación Steam.</system:String>
     <system:String x:Key="item79">Ingrese el código de autenticación de dos factores enviado a su correo electrónico.</system:String>
     <system:String x:Key="item80">No se puede descargar el archivo de instalación:</system:String>
+    <system:String x:Key="item81">Please approve the Steam login from your Steam mobile app.</system:String>
     <system:String x:Key="item84">No se encontró ningún depot de descarga para la aplicación {0}</system:String>
     <system:String x:Key="item85">Depot {0} no listado para aplicación {1}</system:String>
     <system:String x:Key="item89">El directorio seleccionado no está vacío.\n\n¿Continuar de todas formas?</system:String>
@@ -97,6 +98,7 @@
     <system:String x:Key="item114">Borrando archivos antiguos...</system:String>
     <system:String x:Key="item116">Descomprimiendo archivos del servidor...</system:String>
     <system:String x:Key="item118">Descomprimiendo archivos de Node...</system:String>
+    <system:String x:Key="item119">Community Managers</system:String>
     <system:String x:Key="item120">Por favor cierra H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.\n\nPuede usar el botón a continuación para eliminar todos los procesos de H1Z1.</system:String>
     <system:String x:Key="item122">Versión De Juego Actual: 2016</system:String>
