--- a/H1EmuLauncher/Language/StringResources.hr-HR.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr-HR.xaml
@@ -75,6 +75,7 @@
     <system:String x:Key="item78">Unesite dvofaktorni kod za provjeru autentičnosti koji je poslan vašoj aplikaciji Steam.</system:String>
     <system:String x:Key="item79">Unesite dvofaktorni kod za autentifikaciju poslan na Vašu e-poštu.</system:String>
     <system:String x:Key="item80">Nije moguće preuzeti instalacijsku datoteku:</system:String>
+    <system:String x:Key="item81">Please approve the Steam login from your Steam mobile app.</system:String>
     <system:String x:Key="item84">Nije pronađen nijedan depo za preuzimanje aplikacije {0}</system:String>
     <system:String x:Key="item85">Depo {0} nije na popisu za aplikaciju {1}</system:String>
     <system:String x:Key="item89">Odabran direktorij nije prazan.\n\nDa li ste sigurni da želite nastaviti?</system:String>
@@ -97,6 +98,7 @@
     <system:String x:Key="item114">Brisanje starih datoteka...</system:String>
     <system:String x:Key="item116">Raspakiravanje datoteka servera...</system:String>
     <system:String x:Key="item118">Raspakiravanje node datotka...</system:String>
+    <system:String x:Key="item119">Community Managers</system:String>
     <system:String x:Key="item120">Molim vas zatvorite H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe je trenutno u korištenju.\n\nZatvorite sve otvorene instance H1Z1.\n\nMožete upotrijebiti gumb ispod da prekinete sve procese H1Z1.</system:String>
     <system:String x:Key="item122">Trenutna verzija igre: 2016</system:String>
