--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -75,6 +75,7 @@
     <system:String x:Key="item78">Voer de tweefactorauthenticatiecode in die naar je Steam-app is verzonden.</system:String>
     <system:String x:Key="item79">Voer de tweefactorauthenticatiecode in die naar uw e-mail is verzonden.</system:String>
     <system:String x:Key="item80">Kan installatiebestand niet downloaden:</system:String>
+    <system:String x:Key="item81">Please approve the Steam login from your Steam mobile app.</system:String>
     <system:String x:Key="item84">Kon geen deopt vinden om te downloaden voor app {0}</system:String>
     <system:String x:Key="item85">Depot {0} staat niet in lijst voor app {1}</system:String>
     <system:String x:Key="item89">De geselecteerde map is niet leeg.\n\nWit u toch verder gaan?</system:String>
@@ -97,6 +98,7 @@
     <system:String x:Key="item114">Oude bestanden verwijderen...</system:String>
     <system:String x:Key="item116">Unzippen server bestanden...</system:String>
     <system:String x:Key="item118">Unzippen node bestanden...</system:String>
+    <system:String x:Key="item119">Community Managers</system:String>
     <system:String x:Key="item120">Sluit alstublieft H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle geopende exemplaren van H1Z1.\n\nU kunt de onderstaande knop gebruiken om alle processen van H1Z1 te beëindigen.</system:String>
     <system:String x:Key="item122">Huidige spel versie: 2016</system:String>
