--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -75,6 +75,7 @@
     <system:String x:Key="item78">Wprowadź dwuskładnikowy kod uwierzytelniający wysłany do Twojej aplikacji Steam.</system:String>
     <system:String x:Key="item79">Wprowadź dwuskładnikowy kod uwierzytelniający wysłany na Twój adres e-mail.</system:String>
     <system:String x:Key="item80">Nie można pobrać pliku instalacyjnego:</system:String>
+    <system:String x:Key="item81">Please approve the Steam login from your Steam mobile app.</system:String>
     <system:String x:Key="item84">Nie udało się znaleźć żadnego depota do pobrania dla aplikacji {0}</system:String>
     <system:String x:Key="item85">Depot {0} nie istnieje dla aplikacji {1}</system:String>
     <system:String x:Key="item89">Określona ścieżka nie jest pusta.\n\nCzy chcesz kontynuować mimo to?</system:String>
@@ -97,6 +98,7 @@
     <system:String x:Key="item114">Usuwanie starych plików...</system:String>
     <system:String x:Key="item116">Rozpakowywanie plików serwera...</system:String>
     <system:String x:Key="item118">Rozpakowywanie plików node...</system:String>
+    <system:String x:Key="item119">Community Managers</system:String>
     <system:String x:Key="item120">Prosze zamknij H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.\n\nMożesz użyć poniższego przycisku, aby zabić wszystkie procesy H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry: 2016</system:String>
