--- a/H1EmuLauncher/Language/StringResources.se-SE.xaml
+++ b/H1EmuLauncher/Language/StringResources.se-SE.xaml
@@ -75,6 +75,7 @@
     <system:String x:Key="item78">Ange tvåfaktorsautentiseringskoden som har skickats till din Steam-app.</system:String>
     <system:String x:Key="item79">Ange tvåfaktorsautentiseringskoden som har skickats till din E-post.</system:String>
     <system:String x:Key="item80">Det gick inte att ladda ner installationsfilen:</system:String>
+    <system:String x:Key="item81">Please approve the Steam login from your Steam mobile app.</system:String>
     <system:String x:Key="item84">Det gick inte att hitta någon lagring för att ladda ner programmet{0}</system:String>
     <system:String x:Key="item85">Lagring {0} inte listad för programmet {1}</system:String>
     <system:String x:Key="item89">Den valda mappen är inte tom.\n\nVill du fortsätta?</system:String>
@@ -97,6 +98,7 @@
     <system:String x:Key="item114">Tar bort gamla filer...</system:String>
     <system:String x:Key="item116">Packar upp serverfiler...</system:String>
     <system:String x:Key="item118">Packar upp anslutningsfiler...</system:String>
+    <system:String x:Key="item119">Community Managers</system:String>
     <system:String x:Key="item120">Var god stäng H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe används för närvarande.\n\nStäng alla öppna program utav H1Z1.\n\nDu kan använda knappen nedan för att döda alla processer i H1Z1.</system:String>
     <system:String x:Key="item122">Aktuell spelversion: 2016</system:String>
