--- a/H1EmuLauncher/SteamFramePages/2FA.xaml
+++ b/H1EmuLauncher/SteamFramePages/2FA.xaml
@@ -21,7 +21,16 @@
                                  FillBehavior="Stop"
                                  RepeatBehavior="Forever"/>
             </Storyboard>
-            
+            <Storyboard x:Key="LoadingIconAnimationSecondary">
+                <DoubleAnimation Storyboard.TargetName="loadingIconRotateTransformSecondary"
+                                 Storyboard.TargetProperty="Angle"
+                                 By="0"
+                                 To="360"
+                                 Duration="0:0:0.8"
+                                 FillBehavior="Stop"
+                                 RepeatBehavior="Forever"/>
+            </Storyboard>
+
             <!-- Load dictionary into xaml resources just so we can see on the designer -->
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="..\Language\StringResources.en-EN.xaml"/>
@@ -35,94 +44,144 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        <Grid x:Name="_2FACodeScreen">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <!-- Textbox to enter auth code -->
-        <TextBox x:Name="authBox"
-                 Height="35"
-                 Padding="30,1,35,0"
-                 Margin="0,0,10,0"
-                 VerticalAlignment="Center"
-                 VerticalContentAlignment="Center"
-                 CharacterCasing="Upper"
-                 IsHitTestVisible="True"
-                 GotFocus="AuthBoxGotFocus"
-                 LostFocus="AuthBoxLostFocus"
-                 KeyDown="_2FAKeyDown"
-                 Style="{DynamicResource TextBoxStyle}">
+            <!-- Textbox to enter auth code -->
+            <TextBox x:Name="authBox"
+                     Height="35"
+                     Padding="30,1,35,0"
+                     Margin="0,0,10,0"
+                     VerticalAlignment="Center"
+                     VerticalContentAlignment="Center"
+                     CharacterCasing="Upper"
+                     IsHitTestVisible="True"
+                     GotFocus="AuthBoxGotFocus"
+                     LostFocus="AuthBoxLostFocus"
+                     KeyDown="_2FAKeyDown"
+                     Style="{DynamicResource TextBoxStyle}">
 
-            <TextBox.Effect>
-                <DropShadowEffect BlurRadius="15"
-                                  Direction="-90"
-                                  RenderingBias="Quality"
-                                  ShadowDepth="0"
-                                  Opacity="0.3"/>
-            </TextBox.Effect>
-        </TextBox>
+                <TextBox.Effect>
+                    <DropShadowEffect BlurRadius="15"
+                          Direction="-90"
+                          RenderingBias="Quality"
+                          ShadowDepth="0"
+                          Opacity="0.3"/>
+                </TextBox.Effect>
+            </TextBox>
 
-        <!-- Hint for auth code textbox -->
-        <TextBlock x:Name="authHint"
-                   Margin="0,0,10,0"
-                   Padding="35,0,0,0"
+            <!-- Hint for auth code textbox -->
+            <TextBlock x:Name="authHint"
+                       Margin="0,0,10,0"
+                       Padding="35,0,0,0"
+                       VerticalAlignment="Center"
+                       IsHitTestVisible="False"
+                       Foreground="Gray"
+                       Text="{DynamicResource item77}"
+                       Style="{DynamicResource TextBlockStyle}"/>
+
+            <!-- Padlock image -->
+            <Image Source="..\Resources\Padlock.png"
+                   RenderOptions.BitmapScalingMode="Fant"
+                   Width="18"
+                   Height="18"
                    VerticalAlignment="Center"
-                   IsHitTestVisible="False"
-                   Foreground="Gray"
-                   Text="{DynamicResource item77}"
-                   Style="{DynamicResource TextBlockStyle}"/>
+                   HorizontalAlignment="Left"
+                   Margin="10,0,0,1"/>
 
-        <!-- Padlock image -->
-        <Image Source="..\Resources\Padlock.png"
-               RenderOptions.BitmapScalingMode="Fant"
-               Width="18"
-               Height="18"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Left"
-               Margin="10,0,0,1"/>
+            <!-- Button to submit 2fa code -->
+            <Button x:Name="twoFAButton"
+                    RenderOptions.BitmapScalingMode="Fant"
+                    Height="18"
+                    Width="18"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Margin="0,0,20,1"
+                    Click="ContinueButton"
+                    BorderThickness="0"
+                    Style="{DynamicResource EnterButton}">
 
-        <!-- Button to submit 2fa code -->
-        <Button x:Name="twoFAButton"
-                RenderOptions.BitmapScalingMode="Fant"
-                Height="18"
-                Width="18"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Right"
-                Margin="0,0,20,1"
-                Click="ContinueButton"
-                BorderThickness="0"
-                Style="{DynamicResource EnterButton}">
+                <Button.Background>
+                    <ImageBrush ImageSource="..\Resources\Arrow.png" Stretch="Uniform"/>
+                </Button.Background>
+            </Button>
+
+            <!-- Loading wheel GIF -->
+            <Image x:Name="loadingIcon"
+                   Source="..\Resources\Loading.png"
+                   RenderOptions.BitmapScalingMode="Fant"
+                   RenderTransformOrigin="0.5, 0.5"
+                   Margin="0,0,20,1"
+                   Height="18"
+                   Width="18"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Right"
+                   Visibility="Hidden">
+
+                <Image.RenderTransform>
+                    <RotateTransform x:Name="loadingIconRotateTransform" Angle="0"/>
+                </Image.RenderTransform>
+            </Image>
+
+            <!-- Please enter 2 factor code text -->
+            <TextBlock x:Name="twoFacInstructionText"
+                       Grid.Column="1"
+                       Margin="10,0,0,0"
+                       VerticalAlignment="Top"
+                       TextWrapping="Wrap"
+                       Text="{DynamicResource item78}"
+                       Style="{DynamicResource TextBlockStyle}"/>
+        </Grid>
+
+        <Grid x:Name="_2FAAppScreen"
+              Visibility="Collapsed">
             
-            <Button.Background>
-                <ImageBrush ImageSource="..\Resources\Arrow.png" Stretch="Uniform"/>
-            </Button.Background>
-        </Button>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <!-- Loading wheel GIF -->
-        <Image x:Name="loadingIcon"
-               Source="..\Resources\Loading.png"
-               RenderOptions.BitmapScalingMode="Fant"
-               RenderTransformOrigin="0.5, 0.5"
-               Margin="0,0,20,1"
-               Height="18"
-               Width="18"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Right"
-               Visibility="Hidden">
+            <!-- Please enter 2 factor code text -->
+            <TextBlock Margin="10,0,0,0"
+                       VerticalAlignment="Top"
+                       TextWrapping="Wrap"
+                       Text="{DynamicResource item81}"
+                       Style="{DynamicResource TextBlockStyle}"/>
 
-            <Image.RenderTransform>
-                <RotateTransform x:Name="loadingIconRotateTransform" Angle="0"/>
-            </Image.RenderTransform>
-        </Image>
+            <!-- Loading wheel GIF -->
+            <Image Grid.Column="1"
+                   Source="..\Resources\Loading.png"
+                   RenderOptions.BitmapScalingMode="Fant"
+                   RenderTransformOrigin="0.5, 0.5"
+                   Margin="10,0,0,1"
+                   Height="18"
+                   Width="18"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left">
 
-        <!-- Please enter 2 factor code text -->
-        <TextBlock x:Name="twoFacInstructionText"
-                   Grid.Column="1"
-                   Margin="10,0,0,0"
-                   VerticalAlignment="Top"
-                   TextWrapping="Wrap"
-                   Text="{DynamicResource item78}"
-                   Style="{DynamicResource TextBlockStyle}"/>
+                <Image.RenderTransform>
+                    <RotateTransform x:Name="loadingIconRotateTransformSecondary" Angle="0"/>
+                </Image.RenderTransform>
+
+                <Image.Triggers>
+                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetName="loadingIconRotateTransformSecondary"
+                                                 Storyboard.TargetProperty="Angle"
+                                                 By="0"
+                                                 To="360"
+                                                 Duration="0:0:0.8"
+                                                 FillBehavior="Stop"
+                                                 RepeatBehavior="Forever"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Image.Triggers>
+            </Image>
+        </Grid>
     </Grid>
 </UserControl>
