--- a/H1EmuLauncher/App.xaml
+++ b/H1EmuLauncher/App.xaml
@@ -1088,7 +1088,6 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            <SolidColorBrush x:Key="TextBox.Static.Background" Color="Transparent"/>
             <Style x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
                 <Setter Property="IsTabStop" Value="False"/>
@@ -2278,6 +2277,7 @@
                 <Setter Property="AllowDrop" Value="True"/>
                 <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
                 <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+                <Setter Property="SelectionBrush" Value="{StaticResource DarkerColour}"/>
                 <Setter Property="ContextMenu">
                     <Setter.Value>
                         <ContextMenu Style="{DynamicResource ContextMenuStyle}">
@@ -2345,6 +2345,7 @@
                 <Setter Property="AllowDrop" Value="True"/>
                 <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
                 <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+                <Setter Property="SelectionBrush" Value="{StaticResource DarkerColour}"/>
                 <Setter Property="ContextMenu">
                     <Setter.Value>
                         <ContextMenu Style="{DynamicResource ContextMenuStyle}">
